css fix for partners column

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -145,8 +145,8 @@ dappstore_subline: Discover project Hydros dAppstore and try out some dApps!
 exchanges_title: Exchanges
 
 # Partners
-partners_media_title: Media <br> Partners
-partners_integration_title: Integration <br> Partners
+partners_media_title: Media Partners
+partners_integration_title: Integration Partners
 
 # Hydro documentation
 documentation_title: Documentation
