--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -79,7 +79,7 @@ q2_2021: Q2 2021
 product_title: Product
 product_roadmap_wallet: Hydro Wallet (Alpha)
 product_roadmap_remittance: Remittance (Alpha)
-product_roadmap_dappstore: Hydro dAppstore
+product_roadmap_dappstore: Hydro dAppstore relaunch
 product_roadmap_voting: Voting dApp
 product_roadmap_donation: Donation dApp
 product_roadmap_lottery: Lottery dApp
