Revamp Da Team layout

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -40,15 +40,15 @@ team_contact: Contact us
 team_saurav: President
 team_carl: Vice President
 team_alexander: Secretary
-team_srinivas: Chief Technology Officer
+team_srinivas: CTO
 team_rai: Community Lead
 team_stephen: Marketing Lead
 team_ana: Social Media Lead
-team_jignesh: Lead Writer & Developer
+team_jignesh: Lead Writer
 team_njoku: Lead Developer
 team_devis: Fullstack Developer
-team_naveen: Machine Learning Engineer
-team_mathew: Machine Learning Engineer
+team_naveen: Machine Learning
+team_mathew: Machine Learning
 team_phi: Community Manager
 team_dell: Marketing & Designer
 team_pri: Writer
