--- a/_i18n/fil.yml
+++ b/_i18n/fil.yml
@@ -51,6 +51,10 @@ team_folo: Tagapagpapaunlad ng Negosyo
 team_ayu: Kasinsinan Tagapaglikha
 team_sam: Kasinsinan Tagapaglikha
 team_marlo: Grapikong Taga-disenyo
+team_aditya: Developer
+team_hanna: UI/UX Designer
+team_murphy: Product Manager
+
 # contact us
 contact_name: Pangalan
 contact_email: Email(Sulatroniko)
