--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -9,6 +9,31 @@ hydro_is: Hydro is a decentralized ecosystem using cutting-edge cryptography to 
 ecosystem_title: Ecosystem
 ecosystem_subline: Multi-chain protocols securing the web3 reality.
 
+# multichains section
+multichains_title: Multichained Protocols
+multichains_subline: Leverage the full power of multiple chains using the Hydro protocols.
+tokenomics_chains_title: Chains
+tokenomics_chains_subline: The Hydro protocols are available to use on multiple networks. 
+  All of our protocols and dApps are powered by Hydro tokens.
+tokenomics_bridge_title: Bridge
+tokenomics_bridge_subline: Hydro has a total supply of 111,111,111 million which was elected by its community. 
+  The distribution between chains is handled by our bridge that swaps your tokens between chains. 
+  Once the swap from one chain to another is complete you are free to enjoy the benefits of your chosen network.
+tokenomics_evaporation_title: Evaporation
+tokenomics_evaporation_subline: All of the Hydro tokens that are consumed by a Smart Contract will evaporate, 
+  hence the supply will continously decrease over time.
+
+#Blockchains Specification
+ethereum: Ethereum
+binance_smart_chain: Binance Smart Chain
+polkadot: Polkadot
+algorand: Algorand
+cardano: Cardano
+spec_address: Contract Address
+spec_symbol: Symbol
+spec_decimal: Decimals
+spec_token_symbol: Hydro
+
 #protocol section
 protocol_title: Protocols
 protocol_subline: Discover our protocols!
@@ -39,26 +64,18 @@ team_contact: Contact us
 #team position
 team_saurav: President
 team_carl: Vice President
-team_alexander: Secretary
 team_srinivas: CTO
 team_rai: Community Lead
 team_stephen: Marketing Lead
-team_ana: Social Media Lead
 team_jignesh: Lead Writer
-team_njoku: Lead Developer
-team_devis: Fullstack Developer
 team_naveen: Machine Learning
 team_mathew: Machine Learning
 team_phi: Community Manager
 team_dell: Marketing & Designer
-team_pri: Writer
 team_aijhon: Biz dev
-team_folo: Biz dev
 team_ayu: Solidity Developer
-team_sam: Solidity Developer
 team_marlo: Graphic Designer
 team_aditya: Developer
-team_hanna: UI/UX Designer
 team_murphy: Product Manager
 
 # contact us
