--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -11,7 +11,7 @@ ecosystem_subline: Multi-chain protocols securing the web3 reality.
 
 # multichains section
 multichains_title: Multichained Protocols
-multichains_subline: Leverage the full power of multiple chains using the Hydro protocols.
+multichains_subline: Leverage the full power of Hydro by using multiple chains.
 tokenomics_chains_title: Chains
 tokenomics_chains_subline: The Hydro protocols are available to use on multiple networks. 
   All of our protocols and dApps are powered by Hydro tokens.
