--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -16,7 +16,7 @@ tokenomics_chains_title: Chains
 tokenomics_chains_subline: The Hydro protocols are available to use on multiple networks. 
   All of our protocols and dApps are powered by Hydro tokens.
 tokenomics_bridge_title: Bridge
-tokenomics_bridge_subline: Hydro has a total supply of 111,111,111 million which was elected by its community. 
+tokenomics_bridge_subline: Hydro has a total supply of 111,111,111 which was elected by its community. 
   The distribution between chains is handled by our bridge that swaps your tokens between chains. 
   Once the swap from one chain to another is complete you are free to enjoy the benefits of your chosen network.
 tokenomics_evaporation_title: Evaporation
