--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -64,7 +64,7 @@ team_contact: Contact us
 #team position
 team_saurav: President
 team_carl: Vice President
-team_srinivas: CTO
+team_srinivas: CPO
 team_rai: Community Lead
 team_stephen: Marketing Lead
 team_jignesh: Lead Writer
@@ -72,11 +72,8 @@ team_naveen: Machine Learning
 team_mathew: Machine Learning
 team_phi: Community Manager
 team_dell: Marketing & Designer
-team_aijhon: Biz dev
-team_ayu: Solidity Developer
+team_ayu: CTO
 team_marlo: Graphic Designer
-team_aditya: Developer
-team_murphy: Product Manager
 
 # contact us
 contact_name: Name
