--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -68,8 +68,8 @@ team_srinivas: CPO
 team_rai: Community Lead
 team_stephen: Marketing Lead
 team_jignesh: Lead Writer
-team_naveen: Machine Learning
-team_mathew: Machine Learning
+team_bogdan: Game Designer
+team_yash: Marketing Intern
 team_phi: Community Manager
 team_dell: Marketing & Designer
 team_ayu: CTO
