--- a/_i18n/fil.yml
+++ b/_i18n/fil.yml
@@ -33,27 +33,16 @@ team_contact: Makipag-ugnayan sa amin
 #team position
 team_saurav: Pangulo
 team_carl: Pangalawang Pangulo
-team_alexander: Kalihim
-team_srinivas: Punong Opisyal ng Teknolohiya
+team_srinivas: CPO
 team_rai: Namumunong Tagapamahala ng Komunidad
 team_stephen: Namumunong Merkado
-team_ana: Namumuno sa Sosyal Medya
 team_jignesh: Nangungunang Manunulat at Tagalikha
-team_njoku: Nangungunang Tagalikha
-team_devis: Fullstack na Tagalikha
-team_naveen: Inhenyero ng Pag-aaral ng Makina
-team_mathew: Inhenyero ng Pag-aaral ng Makina
-team_phi: Tagapamahala ng Komunidad
 team_dell: Pagmemerkado at Disenyo
-team_pri: Manunulat
-team_aijhon: Tagapagpapaunlad ng Negosyo
-team_folo: Tagapagpapaunlad ng Negosyo
-team_ayu: Kasinsinan Tagapaglikha
-team_sam: Kasinsinan Tagapaglikha
+team_ayu: CTO
 team_marlo: Grapikong Taga-disenyo
 team_aditya: Developer
-team_hanna: UI/UX Designer
-team_murphy: Product Manager
+team_bogdan: Game Designer
+team_yash: Marketing Intern
 
 # contact us
 contact_name: Pangalan
